--- a/week01/index.html
+++ b/week01/index.html
@@ -57,23 +57,23 @@
 
 <p>The Batmobile outlet sells a few vehicles to the occasional car nut who wants a second vehicle to go with his station wagon, but seems to accept, at least for now, that it's a fringe player.</p>
 
-The group giving away the free tanks only stays alive because it is staffed by volunteers, who are lined up at the edge of the street with bullhorns, trying to draw customers' attention to this incredible situation. A typical conversation goes something like this:
+<p>The group giving away the free tanks only stays alive because it is staffed by volunteers, who are lined up at the edge of the street with bullhorns, trying to draw customers' attention to this incredible situation. A typical conversation goes something like this:</P>
 
-Hacker with bullhorn: "Save your money! Accept one of our free tanks! It is invulnerable, and can drive across rocks and swamps at ninety miles an hour while getting a hundred miles to the gallon!"
+<p>Hacker with bullhorn: "Save your money! Accept one of our free tanks! It is invulnerable, and can drive across rocks and swamps at ninety miles an hour while getting a hundred miles to the gallon!"</p>
 
-Prospective station wagon buyer: "I know what you say is true...but...er...I don't know how to maintain a tank!"
+<p>Prospective station wagon buyer: "I know what you say is true...but...er...I don't know how to maintain a tank!"</p>
 
-Bullhorn: "You don't know how to maintain a station wagon either!"
+<p><em>Bullhorn</em>: "You don't know how to maintain a station wagon either!"</p>
 
-Buyer: "But this dealership has mechanics on staff. If something goes wrong with my station wagon, I can take a day off work, bring it here, and pay them to work on it while I sit in the waiting room for hours, listening to elevator music."
+<p><em>Buyer<em>: "But this dealership has mechanics on staff. If something goes wrong with my station wagon, I can take a day off work, bring it here, and pay them to work on it while I sit in the waiting room for hours, listening to elevator music."</p>
 
-Bullhorn: "But if you accept one of our free tanks we will send volunteers to your house to fix it for free while you sleep!"
+<p><em>Bullhorn</em>: "But if you accept one of our free tanks we will send volunteers to your house to fix it for free while you sleep!"</p>
 
-Buyer: "Stay away from my house, you freak!"
+<p><em>Buyer</em>: "Stay away from my house, you freak!"</p>
 
-Bullhorn: "But..."
+<p><em>Bullhorn</em>: "But..."</p>
 
-Buyer: "Can't you see that everyone is buying station wagons?"
+<p><em>Buyer</em>: "Can't you see that everyone is buying station wagons?"</p>
 
 Copyright © 1999 by Neal StephensonYet now the company that Gates and Allen founded is selling operating systems like Gillette sells razor blades. New releases of operating systems are launched as if they were Hollywood blockbusters, with celebrity endorsements, talk show appearances, and world tours. The market for them is vast enough that people worry about whether it has been monopolized by one company. Even the least technically-minded people in our society now have at least a hazy idea of what operating systems do; what is more, they have strong opinions about their relative merits. It is commonly understood, even by technically unsophisticated computer users, that if you have a piece of software that works on your Macintosh, and you move it over onto a Windows machine, it will not run. That this would, in fact, be a laughable and idiotic mistake, like nailing horseshoes to the tires of a Buick.</p>
 
