--- a/week01/index.html
+++ b/week01/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1>"In the Beginning was the Command Line"</h1>
+<h1>"In the Beginning...was the Command Line"</h1>
 
 <h2>By Neal Stephenson</h2>
 <p><a href="url">http://www.cryptonomicon.com/beginning.html</a></p>
