--- a/week01/index.html
+++ b/week01/index.html
@@ -18,7 +18,7 @@
 
   <ul>
 
-    <li><strong>Item:</strong> the richest man in the world made his fortune from-what? Railways? Shipping? Oil? No, <strong>operating systems</strong>.</li>
+    <li><strong>Item:</strong> the richest man in the world made his fortune from-what? Railways? Shipping? Oil? No, operating systems.</li>
     <li><strong>Item:</strong> the Department of Justice is tackling Microsoft's supposed OS monopoly with legal tools that were invented to restrain the power of Nineteenth-Century robber barons.</li>
     <li><strong>Item:</strong> a woman friend of mine recently told me that she'd broken off a (hitherto) stimulating exchange of e-mail with a young man. At first he had seemed like such an intelligent and interesting guy, she said, but then "he started going all PC-versus-Mac on me."</li>
       </ul>
