--- a/week02/coding101.html
+++ b/week02/coding101.html
@@ -1,7 +1,7 @@
 <h1>My website is all about packing for a hike.</h1>
 
-<p>I <strong>love</strong> hiking. It is what I look forward to it a nice hike. I go on one <em>atleast</em> once a month.:</p>
-<p>this is a list of what i need for my hike</p>
+<p>I <strong>love</strong> hiking. It is what I look forward to it a nice hike. I go on one <em>atleast</em> once a month.<br>
+this is a list of whatI need for my hike</p>
 
 <h2>Packing list </h2>
 
