--- a/week02/coding101.html
+++ b/week02/coding101.html
@@ -1,9 +1,9 @@
 <h1>My website is all about packing for a hike.</h1>
 
-<p>I <strong>love</strong> hiking. It is what I look forward to it a nice hike. I go on one <em>atleast</em> once a month.<br>
-this is a list of whatI need for my hike</p>
+<p>I <strong>love</strong> hiking.I always look forward to a nice hike. I go on one <em>atleast</em> once a month.<br>
+this is a list of what I will need for my hike</p>
 
-<h2>Packing list </h2>
+<h2><strong>Packing list</strong> </h2>
 
 <ol>
   <li>Water bottle</li>
@@ -14,15 +14,4 @@ this is a list of whatI need for my hike</p>
   <li>Bug spray</li>
   <li>Walking stick</li>
 </ol>
-
-<h3>Edam</h3>
-
-<p>Edam is...</p>
-
-<h3>Stilton</h3>
-
-<p>Stilton is...</p>
-
-<h3>Gorgonzola</h3>
-
-<p></p>
+<<footer><center>Copyright 2021 Dylon Clifton</center></footer>
