created web page for 2.2

--- a/week02/coding101.html
+++ b/week02/coding101.html
@@ -1,11 +1,23 @@
-<h1>My website is all about packing for a hike.</h1>
+<!DOCTYPE HTML>
+<html lang="en-US">
+<head>
+  <meta charset="UTF-8">
+  <title>week 02</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+  <h1>This is my web page.</h1>
 
-<p>I <strong>love</strong> hiking.I always look forward to a nice hike. I go on one <em>atleast</em> once a month.<br>
-this is a list of what I will need for my hike</p>
+  <p> <b>This is the start of my story.</b><br>this is the second line</p>
+  <p style="color: blue;">A simple paragraph of text.</p>
+
+  <h1>My website is about packing for a hike, and a Brownie recipe.</h1>
+
+<p>I <strong>love</strong> hiking.I always look forward to a nice hike. I go on one <em>atleast</em> once a month.<br>The flollowing is a list of what I will need for my hike.</p>
 
 <h2><strong>Packing list</strong> </h2>
 
-<ol>
+<ul><strong>
   <li>Water bottle</li>
   <li>Trail mix</li>
   <li>Trail map</li>
@@ -13,5 +25,34 @@ this is a list of what I will need for my hike</p>
   <li>Sun glasses</li>
   <li>Bug spray</li>
   <li>Walking stick</li>
-</ol>
-<<footer><center>Copyright 2021 Dylon Clifton</center></footer>
+  </strong></ul>
+
+  <h2>Brownie Recipe</h2>
+<ol><b>
+  <li>½ cup butter</li>
+  <li>1 cup white sugar</li>
+<li>2 eggs</li>
+  <li>1 teaspoon vanilla extract</liL>
+  <li>⅓ cup unsweetened cocoa powder</li>
+    <li>½ cup all-purpose flour</li>
+<li>¼ teaspoon salt</li>
+  <li>¼ teaspoon baking powder</li></b>
+
+<h2>Baking instructions</h2>
+
+<ol><li>Step 1
+  Preheat oven to 350 degrees F (175 degrees C). Grease and flour an 8-inch square pan.</li>
+
+<li>Step 2
+In a large saucepan, melt 1/2 cup butter. Remove from heat, and stir in sugar, eggs, and 1 teaspoon vanilla. Beat in 1/3 cup cocoa, 1/2 cup flour, salt, and baking powder. Spread batter into prepared pan.</li>
+
+<li>Step 3
+  Bake in preheated oven for 25 to 30 minutes. <strong>Do not overcook</strong>.</li>
+
+
+  <footer><center><em>Copyright 2021 Dylon Clifton</em></center></footer>
+
+
+
+</body>
+</html>
