final commit + link

--- a/week02/coding101.html
+++ b/week02/coding101.html
@@ -10,6 +10,8 @@
 
   <p> <b>This is the start of my story.</b><br>this is the second line</p>
   <p style="color: blue;">A simple paragraph of text.</p>
+  <p><a href="https://codepen.io/dylonc008/pen/RwGXQOg?editors=1000">i have a link for this website on Codepen</a>
+
 
   <h1>My website is about packing for a hike, and a Brownie recipe.</h1>
 
