final commit with link and markings

--- a/week02/coding101.html
+++ b/week02/coding101.html
@@ -10,7 +10,7 @@
 
   <p> <b>This is the start of my story.</b><br>this is the second line</p>
   <p style="color: blue;">A simple paragraph of text.</p>
-  <p><a href="https://codepen.io/dylonc008/pen/RwGXQOg?editors=1000">i have a link for this website on Codepen</a>
+  <p><a href="https://codepen.io/dylonc008/pen/RwGXQOg?editors=1000">i have a link for this website on Codepen</a></p>
 
 
   <h1>My website is about packing for a hike, and a Brownie recipe.</h1>
@@ -34,7 +34,7 @@
   <li>½ cup butter</li>
   <li>1 cup white sugar</li>
 <li>2 eggs</li>
-  <li>1 teaspoon vanilla extract</liL>
+  <li>1 teaspoon vanilla extract</li>
   <li>⅓ cup unsweetened cocoa powder</li>
     <li>½ cup all-purpose flour</li>
 <li>¼ teaspoon salt</li>
