--- a/week02/coding101.html
+++ b/week02/coding101.html
@@ -10,7 +10,7 @@
 
   <p> <b>This is the start of my story.</b><br>this is the second line</p>
   <p style="color: blue;">A simple paragraph of text.</p>
-  <p><a href="https://codepen.io/dylonc008/pen/RwGXQOg?editors=1000">i have a link for this website on Codepen</a></p>
+  <p><a href="https://codepen.io/dylonc008/pen/RwGXQOg?editors=1000">I have a working copy for this page on Codepen</a></p>
 
 
   <h1>My website is about packing for a hike, and a Brownie recipe.</h1>
