--- a/week02/index.html
+++ b/week02/index.html
@@ -7,7 +7,7 @@
        <link rel="stylesheet" type="text/css" href="style.css">
      </head>
      <body>
-       <h1>This is my web page.</h1>
+       <h1>This is my web page.It should work</h1>
        <img src="https://cdn.pixabay.com/photo/2018/05/11/08/11/pet-3389729_960_720.jpg"
             alt="Description of the image" width="400">
      </body>
