commit multipul changes

--- a/week02/coding101.html
+++ b/week02/coding101.html
@@ -51,6 +51,8 @@ In a large saucepan, melt 1/2 cup butter. Remove from heat, and stir in sugar, e
 <li>Step 3
   Bake in preheated oven for 25 to 30 minutes. <strong>Do not overcook</strong>.</li>
 
+<p><a href="https://dylonc008.github.io/week02/index.html">Please visit my korgi test page.</a>
+
 
   <footer><center><em>Copyright 2021 Dylon Clifton</em></center></footer>
 
