--- a/week02/index.html
+++ b/week02/index.html
@@ -9,6 +9,7 @@
      <body>
        <h1>This is my web page.</h1>
        <img src="https://cdn.pixabay.com/photo/2018/05/11/08/11/pet-3389729_960_720.jpg"
-            alt="Description of the image" width="600">
+            alt="jumping korgi" width="800">
+            <p><a href="https://dylonc008.github.io/week02/coding101.html">Please visit my test page.</a>
      </body>
      </html>
